--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -30,7 +30,7 @@
             </div>
             <div id="signup-column" class="col-10 offset-1 col-sm-6 offset-sm-3 col-md-6 offset-md-3 col-lg-4 offset-lg-4" style="padding-top: 0px;">
                 <div class="d-flex justify-content-center" style="width: 100%;">
-                    <form id="signup-form" style="width: 300px" method='POST' action='/index'>
+                    <form id="signup-form" style="width: 300px" method='POST' action='/signup'>
                         <div class="form-row">
                             <div class="form-group col-12 col-md-12">
                                 <!--<label for="firstName">First Name</label>-->
