--- a/views/answers.ejs
+++ b/views/answers.ejs
@@ -22,17 +22,20 @@
         
         <div class="row">
             <div class="col-6 " style="padding-top: 10px">
-                
-                    <p style="font-size: 30pt; color: white;font-weight: 200">Ask your Git question:</p>
-                
-                            <form action="/dash9" method="POST">
-                                Enter question here:<input type="text" name="title" />
-                                
-                                <input type="submit" />  
-                            </form>
-                           
+                <a style="font-size: 30pt; color: white;font-weight: 200" href= 'http://localhost:2001/dash'>Click Back to Dashboard</a> 
+                <p style="font-size: 30pt; color: white;font-weight: 200">Answers</p>
+                    <% if (questions.length > 0) { %>
+                        <% for (i=0; i< questions.length; i++) { %>
+                            <h1>Question: <%= questions[i].title %></h1>
+                            <h2>Answers: <%= questions[i].content %></h2>
+                           <% } %>
+                           <% } %>
+                            
+                        
             </div>
+            
         </div>
+        
     </div>
 
 
