--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -7,60 +7,118 @@
     <title>Pop</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" type="text/css" href="css/signup.css">
-
+   <link rel="stylesheet" type="text/css" href="/css/signup.css">
+    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <!--Fonts-->
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif|Dosis|Montserrat|Libre+Baskerville|Raleway" rel="stylesheet">
 
-
     <!--Javascript/JQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="/js/signup.js"></script>
+    <script src="../js/signup.js"></script>
 
 </head>
 
 <body>
-    <div id="container-flex">
-        <div class="row">
-            <div class="col-10 offset-1 col-sm-6 offset-sm-3 col-md-6 offset-md-3 col-lg-4 offset-lg-4" style="padding-top: 100px;">
-                <div class="d-flex justify-content-center" style="width: 100%;">
-                    <p style="width: 300px; font-size: 20pt; color: white;font-weight: 200">Sign Up</p>
-                </div>
-            </div>
-            <div id="signup-column" class="col-10 offset-1 col-sm-6 offset-sm-3 col-md-6 offset-md-3 col-lg-4 offset-lg-4" style="padding-top: 0px;">
-                <div class="d-flex justify-content-center" style="width: 100%;">
-                    <form id="signup-form" style="width: 300px" method='POST' action='/signup'>
-                        <div class="form-row">
-                            <div class="form-group col-12 col-md-12">
-                                <!--<label for="firstName">First Name</label>-->
-                                <input type="text" class="form-control" name="userName" id="userName" placeholder="Username" required="required">
-                            </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group col-12">
-                                <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
-                            </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group col-12">
-                                <input type="password" class="form-control" name="password" id="password" placeholder="Password" required>
-                            </div>
+    <nav class="main-nav">
+	<ul>
+		<li><a class="signin" href="#0">Sign in</a></li>
+		<li><a class="signup" href="#0">Sign up</a></li>
+	</ul>
+</nav>
 
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group col-12">
-                                <button style="width: 100%" id="signup-button" class="btn btn-info">Submit</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
+<div class="user-modal">
+		<div class="user-modal-container">
+			<ul class="switcher">
+				<li><a href="#0">Sign in</a></li>
+				<li><a href="#0">New account</a></li>
+			</ul>
 
-        </div>
+			<div id="login">
+				<form class="form" method="POST" action="/login">
+					<p class="fieldset">
+						<label class="image-replace email" for="signin-email">Username</label>
+						<input name="userName" class="full-width has-padding has-border" id="signin-email" type="text" placeholder="Username">
+						<span class="error-message">An account with this email address does not exist!</span>
+					</p>
 
-    </div>
-    </div>
+					<p class="fieldset">
+						<label class="image-replace password" for="signin-password">Password</label>
+						<input name="password" class="full-width has-padding has-border" id="signin-password" type="password"  placeholder="Password">
+						<a href="#0" class="hide-password">Show</a>
+						<span class="error-message">Wrong password! Try again.</span>
+					</p>
+
+					<p class="fieldset">
+						<input type="checkbox" id="remember-me" checked>
+						<label for="remember-me">Remember me</label>
+					</p>
+
+					<p class="fieldset">
+						<input class="full-width" type="submit" value="Login">
+					</p>
+				</form>
+				
+				<p class="form-bottom-message"><a href="#0">Forgot your password?</a></p>
+				<!-- <a href="#0" class="close-form">Close</a> -->
+			</div>
+
+			<div id="signup">
+				<form class="form" method="POST" action="/signup">
+					<p class="fieldset">
+						<label class="image-replace username" for="signup-username">Username</label>
+						<input name="userName" class="full-width has-padding has-border" id="signup-username" type="text" placeholder="Username">
+						<span class="error-message">Your username can only contain numeric and alphabetic symbols!</span>
+					</p>
+
+					<p class="fieldset">
+						<label class="image-replace email" for="signup-email">E-mail</label>
+						<input name="email" class="full-width has-padding has-border" id="signup-email" type="email" placeholder="E-mail">
+						<span class="error-message">Enter a valid email address!</span>
+					</p>
+
+					<p class="fieldset">
+						<label class="image-replace password" for="signup-password">Password</label>
+						<input name="password" class="full-width has-padding has-border" id="signup-password" type="password"  placeholder="Password">
+						<a href="#0" class="hide-password">Show</a>
+						<span class="error-message">Your password has to be at least 6 characters long!</span>
+					</p>
+
+					<p class="fieldset">
+						<input type="checkbox" id="accept-terms">
+						<label for="accept-terms">I agree to the <a class="accept-terms" href="#0">Terms</a></label>
+					</p>
+
+					<p class="fieldset">
+						<input class="full-width has-padding" type="submit" value="Create account">
+					</p>
+				</form>
+
+				<!-- <a href="#0" class="cd-close-form">Close</a> -->
+			</div>
+
+			<div id="reset-password">
+				<p class="form-message">Lost your password? Please enter your email address.</br> You will receive a link to create a new password.</p>
+
+				<form class="form">
+					<p class="fieldset">
+						<label class="image-replace email" for="reset-email">E-mail</label>
+						<input class="full-width has-padding has-border" id="reset-email" type="email" placeholder="E-mail">
+						<span class="error-message">An account with this email does not exist!</span>
+					</p>
+
+					<p class="fieldset">
+						<input class="full-width has-padding" type="submit" value="Reset password">
+					</p>
+				</form>
+
+				<p class="form-bottom-message"><a href="#0">Back to log-in</a></p>
+			</div>
+			<a href="#0" class="close-form">Close</a>
+		</div>
+	</div>
 
 </body>
 
