--- a/app/views/answers.ejs
+++ b/app/views/answers.ejs
@@ -1,41 +1,61 @@
 <head>
-        <% include partials/head.ejs %>
-    </head>
-    
-    <body>
-        <% include partials/jumbotron.ejs %>
+    <% include partials/head.ejs %>
+</head>
 
-    <div class="col-lg-6">
-        <h3 class="bg-light text-center raisedbox">Answers's Cards</h3>
+<body>
+    <% include partials/jumbotron.ejs %>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-2"></div>
+                <div class="col-lg-8">
+                    <h3 class="bg-light text-center raisedbox">Answers' Cards</h3>
 
-        <% if (title.length > 0) { %>
-            <% for (i=0; i< title.length; i++) { %>
-                <div class="card raisedbox">
-                    <div class="card-header">
-                        <h3>
-                            <%= title[i] %>
-                        </h3>
-                    </div>
-                    <div class="card-body">
-                        <blockquote class="blockquote mb-0">
-                            <p>
-                                <%= content[i] %>
-                            </p>
-                        </blockquote>
-                    </div>
-                    <div class="card-body">
-                        <form action="/postAnswer/<%=questionid[i]%>?xyz=<%=userid%>" method="POST">
-                            <input type="text" name="content" placeholder="Answer here...">
-                            <button class="btn btn-success" type="submit">Submit</button>
-                        </form>
-                    </div>
+                    <% if (title.length > 0) { %>
+                        <% for (y=0; y < title.length; y++) { %>
+                            <div class="card raisedbox">
+                                <div class="card-header">
+                                    <h3>
+                                        <%= title[y] %>
+                                    </h3>
+                                </div>
+                                <div class="card-body">
+                                    <blockquote class="blockquote mb-0">
+                                        <p>
+                                            <%= content[y] %>
+                                        </p>
+                                    </blockquote>
+                                </div>
+                                <div class="card-body">
+                                    <form action="/postAnswer/<%=questionid[y]%>?xyz=<%=userid%>" method="POST">
+                                        <input type="text" class="form-control mb-1" name="content" placeholder="Answer here...">
+                                        <button class="btn btn-secondary" type="submit">Submit</button>
+                                    </form>
+                                </div>
+                                <!-- answers -->
+                                <% if (answersStorage.length > 0) { %>
+                                    <h4 style="margin-left:19px; color:rgb(138,59,61)">Answers:</h4>
+                                    <% for (i=0;i < answersStorage.length ; i++) { %>
+                                        <% if (questionid[y] == answersStorage[i][0]) { %>
+                                            <div class="card-body">
+                                                <blockquote class="blockquote mb-0">
+                                                    <p>
+                                                        <%= answersStorage[i][1] %>
+                                                    </p>
+                                                    <hr style="border-bottom:rgb(138,59,61) solid 1px"></hr>
+                                                </blockquote>
+                                            </div>
+                                            <%   }   %>
+                                                <%   }   %>
+                                                    <%   }   %>
+                            </div>
+                            <br>
+                            <% } %>
+                                <% } %>
+
                 </div>
-                <br>
-                <% } %>
-                    <% } %>
-
-    </div>
-
-            <!-- importing bootstrap scripts -->
-            <% include partials/bootstrap.ejs %>
+                <div class="col-lg-2"></div>
+            </div>
+        </div>
+        <!-- importing bootstrap scripts -->
+        <% include partials/bootstrap.ejs %>
 </body>
