--- a/app/views/dashboard.ejs
+++ b/app/views/dashboard.ejs
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     <% include partials/head.ejs %>
 </head>
@@ -5,99 +8,117 @@
 <body>
     <% include partials/jumbotron.ejs %>
         <div class="container">
-
             <div class="row">
-                <!-- profile -->
-                <div class="col-lg-6 bg-light text-center raisedbox" style="height:400px;">
-                    <img class="img-fluid" src="/images/useravatar.png" alt="userPic">
-                    <h2 class="lead">Welcome to your Dashboard</h2>
+                <div class="col-lg-6 text-center rounded mb-3">
+                    <div class="card text-center" style="height:425px;">
+                        <div class="card-header">
+                            Dashboard
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <%= userName %>
+                            </h5>
+                            <img class="img-fluid" src="/images/useravatar.png" alt="userPic">
+                        </div>
+                    </div>
                 </div>
-                <!-- question and answer section -->
                 <div class="col-lg-6">
-                    <!-- question form -->
-                    <form action="/question/<%= userid %>" method="POST">
-                        <div class="form-group">
-                            <label for="title">Title</label>
-                            <input type="text" class="form-control" name="title" placeholder="Enter title">
+                    <div class="card" style="height: 425px;">
+                        <div class="card-header">
+                            <span>Have a question to Pop?</span>
                         </div>
-                        <div class="form-group">
-                            <select name="category">
-                                <option value="front-end">Front-End</option>
-                                <option value="back-end">Back-End</option>
-                                <option value="database">Database</option>
-                                <option value="git">Git</option>
-                                <option value="others">Job/Career</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="subject">Content</label>
-                            <input type="text" class="form-control" name="content" placeholder="Enter content">
-                        </div>
-                        <button type="submit" class="btn btn-success">Submit</button>
-                    </form>
-                    <!-- answer form -->
-                    <div class="answer_questions">
-                        <div id="helpBanner" class="d-flex justify-content-center">
-                            <h3>Help other geeks!</h3>
-                        </div>
-                        <div id="linksDiv">
-                            <a href="/answers/front-end?xyz=<%=userid%>">Front-End</a>
-                            |
-                            <a href="/answers/back-end?xyz=<%=userid%>">Back-End</a>
-                            |
-                            <a href="/answers/database?xyz=<%=userid%>">Database</a>
-                            |
-                            <a href="/answers/git?xyz=<%=userid%>">Git</a>
-                            |
-                            <a href="/answers/others?xyz=<%=userid%>">Others</a>
+                        <div class="card-body">
+                            <form action="/question/<%= userid %>" method="POST">
+                                <div class="card-body">
+                                    <select class="custom-select" name="category">
+                                        <option selected>Choose A Category</option>
+                                        <option value="front-end">Front-End</option>
+                                        <option value="back-end">Back-End</option>
+                                        <option value="database">Database</option>
+                                        <option value="git">Git</option>
+                                        <option value="others">Other</option>
+                                    </select>
+                                    <input type="text" class="form-control mb-1" name="title" placeholder="Question Title" style="margin-top: 5px;">
+
+                                    <div class="input-group">
+                                        <textarea type="text" name="content" class="form-control" aria-label="With textarea" placeholder="Question" style="height:180px;max-height: 180px; min-height: 180px;"></textarea>
+                                    </div>
+                                    <button type="submit" class="btn btn-secondary mt-3" style="width:150px;">Pop It!</button>
+                            </form>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <br>
-        <br>
-        <!-- user questions' cards -->
-        <div class="row">
-            <div class="col-lg-6">
-                <h3 class="bg-light text-center raisedbox">My Questions</h3>
 
-                <% if (title.length > 0) { %>
-                    <% for (i=0; i< title.length; i++) { %>
-                        <div class="card raisedbox">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 rounded" style="overflow:scroll;max-height:425px;">
+                    <h1 class="bg-light text-center rounded">My Questions</h1>
 
-                            <div class="card-header">
-                                <h3>
-                                    <%= title[i] %>
-                                </h3>
+                    <% if (title.length > 0) { %>
+                        <% for (y=0; y< title.length; y++) { %>
+                            <div class="card raisedbox">
+
+                                <div class="card-header">
+                                    <h3>
+                                        <%= title[y] %>
+                                    </h3>
+                                </div>
+                                <div class="card-body">
+                                    <blockquote class="blockquote mb-0">
+                                        <p>
+                                            <%= content[y] %>
+                                        </p>
+                                        <footer class="blockquote-footer">
+                                            <cite title="Source Title">
+                                                Category:
+                                                <%= category[y] %>
+                                            </cite>
+                                        </footer>
+                                    </blockquote>
+                                </div>
+                                <!-- answers -->
+                                <% if (answersStorage.length > 0) { %>
+                                    <h4 style="margin-left:19px; color:rgb(138,59,61)">Answers:</h4>
+                                    <% for (i=0;i < answersStorage.length ; i++) { %>
+                                        <% if (questionid[y] == answersStorage[i][0]) { %>
+                                            <div class="card-body">
+                                                <blockquote class="blockquote mb-0">
+                                                    <p>
+                                                        <%= answersStorage[i][1] %>
+                                                    </p>
+                                                    <hr style="border-bottom:rgb(138,59,61) solid 1px"></hr>
+                                                </blockquote>
+                                            </div>
+                                            <%   }   %>
+                                                <%   }   %>
+                                                    <%   }   %>
+            
                             </div>
-                            <div class="card-body">
-                                <blockquote class="blockquote mb-0">
-                                    <p>
-                                        <%= content[i] %>
-                                    </p>
-                                    <footer class="blockquote-footer">
-                                        <cite title="Source Title">
-                                            Category:
-                                            <%= category[i] %>
-                                        </cite>
-                                    </footer>
-                                </blockquote>
-                            </div>
-                        </div>
-                        <br>
-                        <% } %>
+                            <br>
                             <% } %>
+                                <% } %>
 
+                </div>
+                <div class="col-lg-6 rounded">
+                    <h1 class="bg-light text-center rounded">Answer Others' Questions</h1>
+                    <div class="card rounded">
+                        <div class="card-header">
+                            Contribute to the Community!
+                        </div>
+                        <div class="card-body">
+                            <a href="/answers/front-end?xyz=<%=userid%>" class="btn btn-default btn-block" style="background-color:#666;color:rgb(255, 255, 255)">Front-End</a>
+                            <a href="/answers/back-end?xyz=<%=userid%>" class="btn btn-default btn-block" style="background-color:#777;color:rgb(255, 255, 255)">Back-End</a>
+                            <a href="/answers/database?xyz=<%=userid%>" class="btn btn-default btn-block" style="background-color:#888;color:rgb(255, 255, 255)">Database</a>
+                            <a href="/answers/git?xyz=<%=userid%>" class="btn btn-default btn-block" style="background-color:#999;color:rgb(255, 255, 255)">Git</a>
+                            <a href="/answers/others?xyz=<%=userid%>" class="btn btn-default btn-block" style="background-color:#aaa;color:rgb(255, 255, 255)">Other Questions</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-
-        </div>
-
-
-        </div>
-        <!-- importing bootstrap scripts -->
-        <% include partials/bootstrap.ejs %>
-
+            <% include partials/bootstrap.ejs %>
 </body>
 
 </html>
